--- a/cling/reload/CMakeLists.txt
+++ b/cling/reload/CMakeLists.txt
@@ -1,7 +1,7 @@
-#ROOTTEST_ADD_TEST(reloadvector
-#                  MACRO runreloadvector.C
-#                  OUTREF reloadvector.ref
-#                  LABELS roottest regression cling)
+ROOTTEST_ADD_TEST(reloadvector
+                  MACRO runreloadvector.C
+                  OUTREF reloadvector.ref
+                  LABELS roottest regression cling)
                   
                   
 ROOTTEST_ADD_TEST(ROOT-7364
