[RF] New `RooFit::Owner` pointer wrapper to flag owning return values
In RooFit, there are many functions that return pointers that are owned
by the caller. We can't change this interface anymore, but we can wrap
the return values transparently in a raw pointer wrapper that is called
a `RooFit::Owner`.

On the C++ side, this helps to analyze your code and detect potential
memory leaks. On the Python side, we can tell cppyy to take ownership
of the object if the pointer is wrapped in a owning pointer such as the
`RooFit::Owner`. This is more flexible and convenient than the existing
cppyy way of flagging the CPPOverloads on the Python side with the
`__creates__ = True` attribute for at least two reasons:

 1. This flag can't be applied at the granularity of indivirual C++
    overloads
 2. It's only on the Python side, so if you want to flag these functions
    in C++ as well as in Python you have to do some bookkeeping

A unit test was implemented to check that the `RooFit::Owner` behaves in
Python as expected, and that there is no memory leaking when using
functions that return them.

As a first example, the `RooFit::Owner` is used in the highly used
function `RooAbsPdf::generate`, so we also get quite some test coverage
from the tutorials.

In the future after this initial effort, the remaining RooFit functions
should be migrated to fix many memory leaks in PyROOT user code.

--- a/bindings/pyroot/pythonizations/test/CMakeLists.txt
+++ b/bindings/pyroot/pythonizations/test/CMakeLists.txt
@@ -201,3 +201,6 @@ endif()
 
 # TComplex pythonizations
 ROOT_ADD_PYUNITTEST(pyroot_tcomplex tcomplex_operators.py)
+
+# Test ROOT::ROwningPtr (raw pointer wrapper to indicate ownership of return values to Python)
+ROOT_ADD_PYUNITTEST(pyroot_rowningptr rowningptr.py)
