--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -248,7 +248,7 @@ if(ROOT_roofit_FOUND)
     ROOT_EXECUTABLE(stressRooFit stressRooFit.cxx LIBRARIES RooFit )
   endif()
   configure_file(stressRooFit_ref.root stressRooFit_ref.root COPYONLY)
-  ROOT_ADD_TEST(test-stressroofit COMMAND stressRooFit -b off FAILREGEX "FAILED|Error in")
+  ROOT_ADD_TEST(test-stressroofit COMMAND stressRooFit -b legacy FAILREGEX "FAILED|Error in")
   ROOT_ADD_TEST(test-stressroofit-batchmode-cpu COMMAND stressRooFit -b cpu FAILREGEX "FAILED|Error in")
   if(CUDA_FOUND)
     ROOT_ADD_TEST(test-stressroofit-batchmode-cuda COMMAND stressRooFit -b cuda FAILREGEX "FAILED|Error in")
@@ -267,7 +267,7 @@ if(ROOT_roofit_FOUND)
   #--stressRooStats----------------------------------------------------------------------------------
   ROOT_EXECUTABLE(stressRooStats stressRooStats.cxx LIBRARIES RooStats)
   configure_file(stressRooStats_ref.root stressRooStats_ref.root COPYONLY)
-  ROOT_ADD_TEST(test-stressroostats COMMAND stressRooStats FAILREGEX "FAILED|Error in" LABELS longtest)
+  ROOT_ADD_TEST(test-stressroostats COMMAND stressRooStats -b legacy FAILREGEX "FAILED|Error in" LABELS longtest)
   ROOT_ADD_TEST(test-stressroostats-batchmode-cpu COMMAND stressRooStats -b cpu FAILREGEX "FAILED|Error in" LABELS longtest)
   if(CUDA_FOUND)
     ROOT_ADD_TEST(test-stressroostats-batchmode-cuda COMMAND stressRooStats -b cuda FAILREGEX "FAILED|Error in" LABELS longtest)
@@ -277,7 +277,7 @@ if(ROOT_roofit_FOUND)
                   FAILREGEX "FAILED|Error in" DEPENDS test-stressroostats )
   endif()
   if (ROOT_minuit2_FOUND)
-    ROOT_ADD_TEST(test-stressroostats-minuit2 COMMAND stressRooStats -minim Minuit2  FAILREGEX "FAILED|Error in" LABELS longtest)
+    ROOT_ADD_TEST(test-stressroostats-minuit2 COMMAND stressRooStats -minim Minuit2 -b legacy  FAILREGEX "FAILED|Error in" LABELS longtest)
   endif()
 
   #--stressHistFactory--------------------------------------------------------------------------------
