--- a/root/meta/rootmap/CMakeLists.txt
+++ b/root/meta/rootmap/CMakeLists.txt
@@ -2,3 +2,5 @@ ROOTTEST_ADD_TEST(runspaces
                   MACRO runspaces.C
                   OUTREF spaces.ref
                   DEPENDS spaces.C)
+
+ROOTTEST_ADD_TESTDIRS()
