--- a/roofit/roofitmore/CMakeLists.txt
+++ b/roofit/roofitmore/CMakeLists.txt
@@ -63,7 +63,7 @@ target_link_libraries(RooFitMore PRIVATE ${GSL_LIBRARIES})
 
 # For recent clang, this can facilitate auto-vectorisation.
 # In RooFit, the errno side effect is not needed, anyway:
-if(NOT MSVC)
+if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
   target_compile_options(RooFitMore PUBLIC -fno-math-errno)
 endif()
 
