--- a/tmva/sofie/CMakeLists.txt
+++ b/tmva/sofie/CMakeLists.txt
@@ -44,6 +44,7 @@ ROOT_STANDARD_LIBRARY_PACKAGE(ROOTTMVASofie
    TMVA/ROperator_Expand.hxx
    TMVA/ROperator_Erf.hxx
    TMVA/ROperator_Swish.hxx
+   TMVA/ROperator_Elu.hxx
    TMVA/SOFIE_common.hxx
    TMVA/SOFIEHelpers.hxx
 
