[tutorial] Veto RBatchGenerator tutorials on windows

--- a/tutorials/CMakeLists.txt
+++ b/tutorials/CMakeLists.txt
@@ -77,7 +77,10 @@ if(NOT clad)
   set(clad_veto fit/minuit2GausFit.C)
 endif()
 
-if (PYTHON_VERSION_STRING_Development_Main VERSION_LESS 3.8)
+# RBatchGenerator tutorials need Python 3.8+.
+# Also, they don't work on Windows at the moment.
+if (PYTHON_VERSION_STRING_Development_Main VERSION_LESS 3.8 OR
+    (MSVC AND NOT win_broken_tests))
   list(APPEND dataframe_veto tmva/RBatchGenerator_NumPy.py)
   list(APPEND dataframe_veto tmva/RBatchGenerator_TensorFlow.py)
   list(APPEND dataframe_veto tmva/RBatchGenerator_PyTorch.py)
