added documentation to sofie-sycl

--- a/tutorials/CMakeLists.txt
+++ b/tutorials/CMakeLists.txt
@@ -304,6 +304,7 @@ else()
   find_python_module(keras QUIET)
   if (NOT PY_KERAS_FOUND)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_Keras.C)
+    list(APPEND tmva_veto tmva/TMVA_SOFIE_GPU_Keras.C)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_Keras_HiggsModel.C)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_RDataFrame.C)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_RDataFrame.py)
@@ -315,13 +316,16 @@ else()
   endif()
   if (NOT PY_TORCH_FOUND)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_PyTorch.C)
+    list(APPEND tmva_veto tmva/TMVA_SOFIE_GPU_PyTorch.C)
     list(APPEND tmva_veto tmva/RBatchGenerator_PyTorch.py)
   endif()
   if (NOT tmva-sofie)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_ONNX.C)
+    list(APPEND tmva_veto tmva/TMVA_SOFIE_GPU_ONNX.C)
   else()
     #copy ONNX file needed for the tutorial
-    configure_file(${CMAKE_SOURCE_DIR}/tmva/sofie/test/input_models/Linear_16.onnx ${CMAKE_BINARY_DIR}/tutorials/tmva/Linear_16.onnx COPYONLY)
+    configure_file(${CMAKE_SOURCE_DIR}/tmva/sofie/test/input_models/Linear_16.onnx ${CMAKE_INSTALL_PREFIX}/tutorials/tmva/Linear_16.onnx COPYONLY)
+    configure_file(${CMAKE_SOURCE_DIR}/tmva/sofie/test/input_models/Linear_64.onnx ${CMAKE_INSTALL_PREFIX}/tutorials/tmva/Linear_64.onnx COPYONLY)
   endif()
 
 endif()
