--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -47,7 +47,7 @@ env:
 jobs:
   
   build-linux:
-    if: github.repository_owner == 'root-project' || github.event_name == 'pull_request'
+    # if: github.repository_owner == 'root-project' || github.event_name == 'pull_request'
 
     permissions:
       contents: read
