--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -114,16 +114,12 @@ jobs:
       #         "
 
       - name: Push Build
-        # if: github.event_name == 'pull_request'
-        # env:
-          # GITHUB_PR_ORIGIN: ${{ github.event.pull_request.head.repo.clone_url }}
+        if:   github.event_name == 'push'
         run: ".github/workflows/root-ci-config/build_root.py
                     --buildtype      Debug
                     --platform       fedora38
                     --incremental    false
-                    --coverage       true
-                    --base_ref       ${{ github.base_ref }}
-                    --head_ref       refs/pull/${{ github.event.pull_request.number }}/head:${{ github.event.pull_request.head.ref }}
+                    --base_ref       ${{ github.ref_name }}
                     --repository     ${{ github.server_url }}/${{ github.repository }}
               "
 
@@ -138,6 +134,8 @@ jobs:
                     --head_ref       ${{ inputs.head_ref }}
                     --repository     ${{ github.server_url }}/${{ github.repository }}
               "
+
+     
 
       - name: Nightly build
         if:   github.event_name == 'schedule'
