fixed issue with softmax1d when blas library is MKLBLAS

--- a/cmake/scripts/ROOTConfig.cmake.in
+++ b/cmake/scripts/ROOTConfig.cmake.in
@@ -79,8 +79,13 @@ endif()
 # Setup components and options
 set(_root_enabled_options @ROOT_ENABLED_OPTIONS@)
 set(_root_all_options @ROOT_ALL_OPTIONS@)
+set(_root_enabled_gpu_options @ROOT_ENABLED_GPU_OPTIONS@)
 
 foreach(_opt ${_root_enabled_options})
+  set(ROOT_${_opt}_FOUND TRUE)
+endforeach()
+
+foreach(_opt ${_root_enabled_gpu_options})
   set(ROOT_${_opt}_FOUND TRUE)
 endforeach()
 
