added README notes for supporting NVIDIA and AMD GPUs

--- a/tmva/sofie/CMakeLists.txt
+++ b/tmva/sofie/CMakeLists.txt
@@ -54,6 +54,7 @@ ROOT_STANDARD_LIBRARY_PACKAGE(ROOTTMVASofie
 target_include_directories(ROOTTMVASofie PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
 
+# default values for TARGET_GPU and GPU_BLAS in case the user does not specify them
 if (NOT TARGET_GPU)
   set(TARGET_GPU Intel)
 endif()
@@ -61,6 +62,7 @@ endif()
 if (NOT GPU_BLAS)
   set(GPU_BLAS MKLBLAS)
 endif()
+
 
 if (tmva-sofie AND sofie-sycl)
   set(TARGET_GPUS "Intel;NVIDIA;AMD")
@@ -76,25 +78,26 @@ if (tmva-sofie AND sofie-sycl)
   endif()
   
   if (NOT ${TARGET_GPU} IN_LIST MKL_TARGETS AND ${GPU_BLAS} STREQUAL "MKLBLAS")
-    message(FATAL_ERROR "Target GPU is not compatible with MKLBLAS. Please select portBLAS instead")
+    set(GPU_BLAS "portBLAS")
+    message(WARNING "Target GPU is not compatible with MKLBLAS. Switching to portBLAS instead")
   endif()
-
 endif()
+
 set_target_properties(ROOTTMVASofie PROPERTIES
   POSITION_INDEPENDENT_CODE TRUE)
 
 if (${TARGET_GPU} STREQUAL "Intel")
-target_compile_definitions(ROOTTMVASofie PUBLIC TARGET_GPU=0)
+  target_compile_definitions(ROOTTMVASofie PUBLIC TARGET_GPU=0)
 elseif(${TARGET_GPU} STREQUAL "NVIDIA")
-target_compile_definitions(ROOTTMVASofie PUBLIC TARGET_GPU=1)
+  target_compile_definitions(ROOTTMVASofie PUBLIC TARGET_GPU=1)
 else()
-target_compile_definitions(ROOTTMVASofie PUBLIC TARGET_GPU=2)
+  target_compile_definitions(ROOTTMVASofie PUBLIC TARGET_GPU=2)
 endif()
 
 if (${GPU_BLAS} STREQUAL "MKLBLAS")
-target_compile_definitions(ROOTTMVASofie PUBLIC GPU_BLAS=0)
+  target_compile_definitions(ROOTTMVASofie PUBLIC GPU_BLAS=0)
 else()
-target_compile_definitions(ROOTTMVASofie PUBLIC GPU_BLAS=1)
+  target_compile_definitions(ROOTTMVASofie PUBLIC GPU_BLAS=1)
 endif()
 
 # tests requires protobuf
