[CMake] Make PROOF optional and enabled by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -468,7 +468,6 @@ add_subdirectory (net)
 add_subdirectory (graf2d)
 add_subdirectory (graf3d)
 add_subdirectory (gui)
-add_subdirectory (proof)
 add_subdirectory (html)
 add_subdirectory (montecarlo)
 add_subdirectory (geom)
@@ -477,6 +476,9 @@ add_subdirectory (misc)
 add_subdirectory (main)
 add_subdirectory (bindings)
 add_subdirectory (sql)
+if(proof)
+  add_subdirectory(proof)
+endif()
 if(tmva)
   add_subdirectory(tmva)
 endif()
