[RF][PyROOT] Fix memory leaks with RooFit command arguments in PyROOT
PyROOT is wrongly interpreting the signature of
`RooLinkedList::Add(RooAbsArg *arg)` as the RooLinkedList taking
ownership of the RooAbsArg. This results in a memory leak because nobody
feels responsible for deleting the arg. This can be fixed by setting the
memory policy of the method to "strict" and not to "heuristic" in the
pythonizations.

This pythonization might become unnecessary in the future if it is
decided to set the global memory policy to "strict" in _facade.py.

Reproducer of the original problem: the first code snippet in this forum
post:
https://root-forum.cern.ch/t/memory-leak-in-fits/56249

--- a/bindings/pyroot/pythonizations/CMakeLists.txt
+++ b/bindings/pyroot/pythonizations/CMakeLists.txt
@@ -43,6 +43,7 @@ if(roofit)
         ROOT/_pythonization/_roofit/_roogenfitstudy.py
         ROOT/_pythonization/_roofit/_rooglobalfunc.py
         ROOT/_pythonization/_roofit/_roojsonfactorywstool.py
+        ROOT/_pythonization/_roofit/_roolinkedlist.py
         ROOT/_pythonization/_roofit/_roomcstudy.py
         ROOT/_pythonization/_roofit/_roomsgservice.py
         ROOT/_pythonization/_roofit/_roonllvar.py
