[tmva][sofie] Add dependency on sklearn for TMVA_SOFIE_Models tutorial

--- a/tutorials/CMakeLists.txt
+++ b/tutorials/CMakeLists.txt
@@ -307,6 +307,7 @@ else()
   find_python_module(keras QUIET)
   find_python_module(sonnet QUIET)
   find_python_module(graph_nets QUIET)
+  find_python_module(sklearn QUIET)
   if (NOT PY_KERAS_FOUND)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_Keras.C)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_Keras_HiggsModel.C)
@@ -317,6 +318,9 @@ else()
     list(APPEND tmva_veto tmva/TMVA_SOFIE_Inference.py)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_RSofieReader.C)
     list(APPEND tmva_veto tmva/RBatchGenerator_TensorFlow.py)
+  endif()
+  if (NOT PY_SKLEARN_FOUND)
+    list(APPEND tmva_veto tmva/TMVA_SOFIE_Models.py)
   endif()
   if (NOT PY_TORCH_FOUND)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_PyTorch.C)
