[tmva][sofie] Add dependency on sklearn for TMVA_SOFIE_Models tutorial

--- a/tutorials/CMakeLists.txt
+++ b/tutorials/CMakeLists.txt
@@ -295,6 +295,7 @@ else()
   #these depends on external packages
   find_python_module(torch QUIET)
   find_python_module(keras QUIET)
+  find_python_module(sklearn QUIET)
   if (NOT PY_KERAS_FOUND)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_Keras.C)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_Keras_HiggsModel.C)
@@ -303,6 +304,9 @@ else()
     list(APPEND tmva_veto tmva/TMVA_SOFIE_RDataFrame_JIT.C)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_Inference.py)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_RSofieReader.C)
+  endif()
+  if (NOT PY_SKLEARN_FOUND)
+    list(APPEND tmva_veto tmva/TMVA_SOFIE_Models.py)
   endif()
   if (NOT PY_TORCH_FOUND)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_PyTorch.C)
